--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Olá mundo</title>
   </head>
   <body>
     <div id="root"></div>
